--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ development: &default
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
-  database: pets_development
+  database: thx_development
   collation: utf8mb4_general_ci
   reconnect: false
   pool: 5
@@ -14,4 +14,4 @@ development: &default
 test:
   <<: *default
   host: <%= ENV["MYSQL_HOST"] || 'db' %>
-  database: pets_test
+  database: thx_test
